compiling_error.txt
/Users/NoBey/c-c-/A+B和C.cpp:3:11: error: C++ requires a type specifier for all declarations
char* max(a,b){return a>b?"true":"false";}
          ^
/Users/NoBey/c-c-/A+B和C.cpp:3:13: error: unknown type name 'b'
char* max(a,b){return a>b?"true":"false";}
            ^
/Users/NoBey/c-c-/A+B和C.cpp:3:25: error: use of undeclared identifier 'b'
char* max(a,b){return a>b?"true":"false";}
                        ^
3 errors generated.
